# ai-mum

./: AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ui-preview.html
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cache.rs  lib.rs  main.rs  models.rs  scheduler.rs
src-tauri/src/commands/: config.rs  mod.rs  usage.rs
src-tauri/src/vendors/: kimi.rs  mod.rs  zhipu.rs
src/components/: QuotaBar.vue  SettingsModal.vue  VendorCard.vue
src/services/: tauri.ts
src/stores/: usage.ts
src/styles/: base.css  variables.css
src/types/: usage.ts
src/views/: Dashboard.vue
