[package]
name = "ai-usage-monitor"
version = "0.1.0"
description = "AI Model Usage Monitor"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }

